--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -1,3 +1,48 @@
+.header {
+    max-width: 100%;
+}
+
+.site-header {
+    position: relative;
+    background-color: #fff;
+    padding: 2rem 3rem 0.5rem;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-nav {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.header-logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: darkblue;
+    z-index: 1;
+}
+
+.header-nav__link {
+    background-color: darkcyan;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 1rem;
+}
+
+.header-nav__button {
+    border: none;
+    background: transparent;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+}
+
 .admin-dashboard {
     max-width: 1200px;
     margin: 2rem auto;
