--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -1,15 +1,25 @@
-.header {
-    max-width: 100%;
+header {
+    width: 100vw;
+    box-sizing: border-box;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+
 .site-header {
-    position: relative;
-    background-color: #fff;
-    padding: 2rem 3rem 0.5rem;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1rem;
+    background-color: #fff;
+    position: relative;
+}
+
+.header-logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: darkblue;
+    text-align: center;
 }
 
 .header-nav {
@@ -17,13 +27,6 @@
     right: 20px;
     top: 50%;
     transform: translateY(-50%);
-}
-
-.header-logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: darkblue;
-    z-index: 1;
 }
 
 .header-nav__link {
