--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -2,22 +2,21 @@ body {
     font-family: "Helvetica Neue", sans-serif;
     background-color: #f8f9fa;
     color: #004d40;
-    margin: 1em;
+    margin: 0;
     padding: 0;
     max-width: 100vw;
     height: 100vh;
 }
 
 header {
-    width: 100vw;
-    box-sizing: border-box;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 100vw;
 }
 
 .site-header {
     position: relative;
     background-color: #fff;
     padding: 2rem 3rem 0.5rem;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -80,7 +79,6 @@ label {
     margin-bottom: 0.5rem;
 }
 
-input[type="text"],
 input[type="email"],
 input[type="password"] {
     padding: 0.5rem 0.75rem;
