--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -55,10 +55,9 @@ body {
 
 .form-container {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 1em auto;
     padding: 2rem 2.5rem;
     background-color: #ffffff;
-    border: 1px solid #e0e0e0;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
     border-radius: 3px;
 }
